// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing the Navbar component User is logged in, navigate to Cooky-Route, Navbar should render accordingly 1`] = `
<nav><a href="/" class="">Main</a><a href="/shoppy" class="">Shoppy</a><a href="/cooky" class="router-link-active router-link-exact-active" aria-current="page">Cooky</a></nav>
<!--v-if-->
`;

exports[`Testing the Navbar component User is logged in, navigate to Shoppy-Route, Navbar should render accordingly 1`] = `
<nav><a href="/" class="">Main</a><a href="/shoppy" class="router-link-active router-link-exact-active" aria-current="page">Shoppy</a><a href="/cooky" class="">Cooky</a></nav>
<!--v-if-->
`;

exports[`Testing the Navbar component When error occurs, div with CSS class error-nav gets rendered 1`] = `
<nav><a href="/login" class="">Login</a></nav>
<div class="error-nav">❗</div>
`;

exports[`Testing the Navbar component When user is logged in, Navbar should render three router-links 1`] = `
<nav><a aria-current="page" href="/" class="router-link-active router-link-exact-active">Main</a><a href="/shoppy" class="">Shoppy</a><a href="/cooky" class="">Cooky</a></nav>
<!--v-if-->
`;

exports[`Testing the Navbar component When user is not logged in, Navbar should have on router-link 1`] = `
<nav><a href="/login" class="">Login</a></nav>
<!--v-if-->
`;
